# test-hivebox

./: .pre-commit-config.yaml
.github/actions/semgrep/: action.yml
.github/actions/trivy/: action.yml
.github/workflows/: app-cd.yaml  app-cd.yml  app-ci.yaml  app-ci.yml  app-docker.yml  app-on-pr.yml  app-on-push-tag.yml  app-on-push.yml  app-on-release.yml  app.yaml  build-and-push-image.yaml  bump-version.yaml  cd.yaml  ci.yaml  ci.yml  docker.yml  pre-commit.yaml  release.yml
app/: .cz.toml  .dockerignore  CHANGELOG.md  Dockerfile  __init__.py  __version__.py  main.py  pyproject.toml  setup.py
app/routers/: temperature.py  version.py
app/tests/: unit_test.py
