[project]
name = "hivebox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.116.1",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "asyncmock>=0.4.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
